feat: Add support for local embeddings using sentence-transformers

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,17 @@ DB_POOL_TIMEOUT=30
 DB_POOL_RECYCLE=3600
 
 # Security
-SECRET_KEY=your-secret-key-change-this-in-production
+SECRET_KEY=your-secret-key
 
 # OpenRouter Configuration
 OPENROUTER_API_KEY=sk-or-v1-your-key-here
 OPENROUTER_MODEL=openai/gpt-3.5-turbo
+
+# Embedding Configuration
+# Set USE_LOCAL_EMBEDDINGS=true to use free local embeddings (sentence-transformers)
+# Set USE_LOCAL_EMBEDDINGS=false to use OpenRouter embeddings (requires API key & credits)
+USE_LOCAL_EMBEDDINGS=false
+EMBEDDING_MODEL=text-embedding-ada-002
 
 # Vector Database
 VECTOR_DB_TYPE=chroma
